# ida-hub-agent-skills

./: .gitignore  CLAUDE.md  DEV.md  HANDOFF.md  LICENSE  README.md  README_CN.md  bump_version.py  package.json  turbo.json  总体架构.md
apps/api/: package.json
apps/api/scripts/: embed-web.ts
apps/api/src/: app.ts  server.ts
apps/web/: index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  version.ts
docs/: HUB前端.md  HUB后端.md  IDA插件设计.md  hub-backend.md  hub-frontend.md  ida-plugin.md  integration-checklist.md  requirements.md  skills.md  skill设计.md  总体架构需求.md
hub_backend/: DEV.md  README.md  README_CN.md  pyproject.toml
hub_backend/scripts/: build_frontend.py
hub_backend/src/ida_chat_hub/: __init__.py  config.py  logger.py  main.py  models.py  network.py  registry.py  routes.py  ws_handler.py
hub_backend/tests/: test_hub_backend.py
hub_frontend/: DEV.md  README.md  README_CN.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
hub_frontend/app/: globals.css  layout.tsx  page.tsx
hub_frontend/app/config/: page.tsx
hub_frontend/components/: CodeEditor.tsx  ConfigMarkdown.tsx  Header.tsx  InstanceCard.tsx  InstanceList.tsx
hub_frontend/lib/: api.ts  types.ts
ida_plugins/: .gitignore  CLAUDE.md  DEV.md  README.md  README_CN.md  ida_multi_chat_entry.py  requirements.txt
ida_plugins/ida_multi_chat/: __init__.py  config_persistence.py  core.py  hub_client.py  ida_config.py  plugin.py
skills/: CLAUDE.md  DEV.md  README.md
skills/ida/: SKILL.md
skills/ida-hub/: SKILL.md  run_script.py
skills/ida-hub/shared/: ANALYSIS_PATTERNS.md  API_REFERENCE_CORE.md  (+8 more)
设计文档/: 总体架构.md  总体架构需求.md
(+37 files in other folders)
