[project]
name = "ida-chat-hub"
version = "0.1.0"
description = "IDA Chat Hub backend service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "websockets>=12.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "psutil>=5.9.0",
  "rich>=13.7.0",
]

[project.scripts]
ida-chat-hub = "ida_chat_hub.main:run"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ida_chat_hub"]

[tool.uv]
package = true

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
